--- a/src/app/package.json
+++ b/src/app/package.json
@@ -1,19 +1,12 @@
 {
-  "name": "skripsi-software",
-  "version": "0.1.0",
-  "author": "Muhammad Ghazali <muhammad.ghazali@widyatama.ac.id>",
-  "description": "A Web API",
+  "name": "application-name",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node app.js"
   },
-  "main": "./lib/skripsi-software",
   "dependencies": {
-    "express": "3.1.x",
+    "express": "3.1.2",
     "jade": "*"
-  },
-  "license": "private",
-  "engines": {
-    "node": "0.8.x"
   }
 }
