--- a/src/app/package.json
+++ b/src/app/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "application-name",
+  "name": "ghanozjson",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.1.2",
-    "jade": "*"
+    "express": "3.1.2"
   }
 }
