--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: node_js
 node_js:
   - "0.8"
+
+services: mongodb
+
+before_script:
+  - mongo ghanoz-json-test --eval 'db.addUser("travis", "test");'
