--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,15 @@ env:
 
 services: mongodb
 
+before_install:
+  - cd $TRAVIS_BUILD_DIR
+  - cd src/app
+  - npm install
+
 before_script:
   - mongo ghanoz-json-test --eval 'db.addUser("travis", "test");'
+
+script:
+  - cd $TRAVIS_BUILD_DIR
+  - cd test
+  - npm test
