--- a/src/app/package.json
+++ b/src/app/package.json
@@ -17,7 +17,8 @@
     "xml"
   ],
   "dependencies": {
-    "express": "3.1.2"
+    "express": "3.1.x",
+    "easyxml": "0.0.x"
   },
   "analyze": true,
   "license": "MIT",
