--- a/src/app/package.json
+++ b/src/app/package.json
@@ -18,7 +18,8 @@
   ],
   "dependencies": {
     "express": "3.1.x",
-    "easyxml": "0.0.x"
+    "easyxml": "0.0.x",
+    "mongodb": "1.2.x"
   },
   "analyze": true,
   "license": "MIT",
