--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - npm install
 
 before_script:
-  - mongo ghanoz-json-test --eval 'db.addUser("travis", "test");'
+  - mongo ghanoz_json_test --eval 'db.addUser("travis", "test");'
 
 script:
   - cd $TRAVIS_BUILD_DIR
