--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Muhammad Ghazali <muhammadghazali2480@gmail.com>",
   "description": "POC: JSON is more efficient than XML when use it in Web service resource representation",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app/app.js",
+    "test": "node_modules/vows/bin/vows test/api-end-point-test/*-spec.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,11 @@
     "express": "3.1.x",
     "easyxml": "0.0.x",
     "mongodb": "1.2.x"
+  },
+  "devDependencies": {
+    "vows": "0.6.x",
+    "xml2js": "0.2.x",
+    "request": "2.11.x"
   },
   "analyze": true,
   "license": "MIT",
