--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "express": "3.1.x",
     "easyxml": "0.0.x",
-    "mongodb": "1.2.x"
+    "mongodb": "1.2.x",
+    "pretty-data": "0.40.x"
   },
   "devDependencies": {
     "vows": "0.6.x",
