--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "xml"
   ],
   "dependencies": {
-    "express": "3.1.x",
+    "express": "3.2.x",
     "easyxml": "0.0.x",
-    "mongodb": "1.2.x",
-    "pretty-data": "0.40.x"
+    "mongodb": "1.3.x",
+    "pretty-data": "0.40.x",
+    "vows": "0.7.x"
   },
   "devDependencies": {
-    "vows": "0.6.x",
     "xml2js": "0.2.x",
     "request": "2.11.x"
   },
   "analyze": true,
   "license": "MIT",
-  "engines": "0.8.x"
+  "engines": "0.10.x"
 }
