--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ services: mongodb
 before_install:
   - cd $TRAVIS_BUILD_DIR
   - npm install
+  - npm install -d
 
 script:
   - cd $TRAVIS_BUILD_DIR
