--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "express": "3.2.x",
     "easyxml": "0.0.x",
     "mongodb": "1.3.x",
-    "pretty-data": "0.40.x",
-    "vows": "0.7.x"
+    "pretty-data": "0.40.x"
   },
   "devDependencies": {
     "xml2js": "0.2.x",
-    "request": "2.11.x"
+    "request": "2.11.x",
+    "vows": "0.7.x"
   },
   "analyze": true,
   "license": "MIT",
